# sdk-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/simplellm/: client.hpp  simplellm.hpp  sse_parser.hpp  types.hpp
src/: client.cpp
tests/: CMakeLists.txt  test_main.cpp
